@@ -1,4 +1,7 @@
-$Id: CHANGES,v 1.49 2005/10/18 19:26:11 psavola Exp $
+$Id: CHANGES,v 1.50 2005/10/28 09:25:38 psavola Exp $
+
+10/28/2005	Get interface MTU automatically, so that you can
+		use jumboframes and advertise MTU >1500.
 
 10/19/2005	Release 0.9.
 
